tools/hermes/tests/fixtures/sizedness/expected.stderr
  × failed to synthesize
  │   Hermes.core.marker.Sized (Slice U16)
  │ 
  │ Hint: Additional diagnostic information may be available using the
  │ `set_option diagnostics true` command.
   ╭─[[PROJECT_ROOT]/reject/src/lib.rs:8:5]
 7 │ /// context:
 8 │ /// derive_sized sizedness_reject.NamedDst
   ·     ───────────────────┬──────────────────
   ·                        ╰── here
 9 │ /// ```
   ╰────

Error: Lean verification failed
